--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
       <div class="col-md-8 offset-md-2">
         <h1 class="mb-4 text-center">Ricette Cocktail</h1>
         <label for="searchInput" class="mb-2 d-block text-center">Gli alcolici sono riservati ai maggiorenni</label>
-        <div class="input-group">
+        <div class="input-group mb-3">
           <input type="text" class="form-control" id="searchInput" placeholder="Inserisci il nome del drink" />
           <div class="input-group-append">
             <button class="btn btn-success" type="button" onclick="searchCocktail()">Cerca</button>
           </div>
         </div>
+        <p class="text-center text-muted mb-0">Developed by Mario Saponaro ©</p>
       </div>
     </div>
     <div class="row mt-4" id="cocktailList">
@@ -47,13 +48,6 @@
       </div>
     </div>
   </div>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container text-center">
-      <p class="text-muted mb-0">Developed by Mario Saponaro ©</p>
-    </div>
-  </footer>
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
