--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- Developed by Mario Saponaro © -->
+<!-- Last update 18/03/2024 16:31:02 -->
+<!-- GitHub: webt3ch -->
+
 <!DOCTYPE html>
 <html lang="it">
 <head>
