--- a/Cocktail Odyssey/index.html
+++ b/Cocktail Odyssey/index.html
@@ -96,6 +96,6 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
